Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
0.10.0
-
None
-
None
Description
At the time of this bug report, log4cxx would not successfully link due to missing symbols (UnicodeHelper::encodeWide and UnicodeHelper::decodeWide) that occur since the content of the wchar_t was not recognized as either UCS-4 (aka UTF-32) indicated by the _STD_ISO_10646_ being defined) or UTF-16 indicated by _WIN32. These methods are used in a fallback encoder/decoder used if iconv is not available.
wchar_t support was recently added to Mac OS/X and is discouraged in preference to using CFString. The expected size and contents of wchar_t are were not obvious in the documentation. It may be desirable to typedef LogString to CFString on the Mac, however I expect that would require adding some additional macro to support string operations that are not consistent with STL strings. It would also likely be helpful to define CFString equilivents to functions that take external strings (aka Logger.info(), etc).
Mac OS/X's NSLog seems analoguous to Win32's OutputDebugString. It may be desirable to make OutputDebugStringAppender call OutputDebugString on Win32 and NSLog on Mac OS/X.
Please add a comment to this bug for any other Mac OS/X specific wish until this bug is closed (at which time you can open another).