LOGCXX-85: Mac OS/X wchar_support